# kasane

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: windows-build-and-release.yml
Source/: AppState.cpp  AppState.h  AudioHostEngine.cpp  AudioHostEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  PresetStore.cpp  PresetStore.h  SplashWindow.cpp  SplashWindow.h
docs/: design-plan.md  frontend-architecture-spec.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/bridge/: index.ts  mock.ts
frontend/src/components/: Button.css  Button.tsx  HorizontalMeter.css  HorizontalMeter.tsx  Meter.css  Meter.tsx  Overlay.css  Overlay.tsx  Select.css  Select.tsx  Slider.css  Slider.tsx  index.ts
frontend/src/features/audio-panel/: AudioPanel.css  AudioPanel.tsx  index.ts
frontend/src/features/bottom-bar/: BottomBar.css  BottomBar.tsx
frontend/src/features/chain-view/: ChainView.css  ChainView.tsx  index.ts
frontend/src/features/header/: Header.css  Header.tsx
frontend/src/features/plugin-chain/: PluginChain.css  PluginChain.tsx  index.ts
frontend/src/features/plugin-picker/: PluginPickerOverlay.css  PluginPickerOverlay.tsx  index.ts
frontend/src/features/preset-sidebar/: PresetSidebar.css  PresetSidebar.tsx  index.ts
frontend/src/features/settings-overlay/: SettingsOverlay.css  SettingsOverlay.tsx
frontend/src/features/tuner-overlay/: TunerOverlay.css  TunerOverlay.tsx  index.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  ja.json  ko.json  zh.json
frontend/src/state/: index.ts
frontend/src/styles/: global.css  reset.css  tokens.css
frontend/src/types/: index.ts
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  bridge.ts  main.tsx  state.ts  styles.css  types.ts
web/src/i18n/: en.json  ja.json  ko.json  zh.json
